added some solutions